fix z-index of gr-panel

--- a/kahuna/public/js/components/gr-panel/gr-panel.css
+++ b/kahuna/public/js/components/gr-panel/gr-panel.css
@@ -13,6 +13,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
+    z-index: 1;
 }
 
 .panel--right__hidden {
